force-app/main/default/objects/nDESIGN__Route__c/nDESIGN__Route__c.object-meta.xml
<CustomObject>
    <label>-D Route</label>
    <nameField>
        <label>Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>-D Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>