force-app/main/default/objects/nDESIGN__Route__c/fields/nDESIGN__Icon_Class__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Icon_Class__c</fullName>
    <label>Icon Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>