force-app/main/default/objects/nDESIGN__Route__c/fields/nDESIGN__Is_Hidden__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Is_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hidden</label>
    <type>Checkbox</type>
</CustomField>