force-app/main/default/objects/nDESIGN__Route__c/fields/nDESIGN__Order__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Order__c</fullName>
    <label>Order</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>