force-app/main/default/objects/nDESIGN__Route__c/fields/nDESIGN__Parent_App__c.field-meta.xml
<CustomField>
    <fullName>nDESIGN__Parent_App__c</fullName>
    <label>Parent App</label>
    <length>255</length>
    <type>Text</type>
</CustomField>