force-app/main/default/objects/nDESIGN__Route__c/listViews/nDESIGN__All1.listView-meta.xml
<ListView>
    <fullName>nDESIGN__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>